# ctxrisk-cli

./: .gitignore  README.md  pyproject.toml
examples/: scenario-a-hardened-internal.yaml  scenario-b-privileged-exposed.yaml  scenario-c-public-nonroot.yaml  scenario-c-runtime.json  scenario-d-default-internal.yaml  scenario-e-hardened-public.yaml  scenario-f-root-exposed-clean.yaml  scenario-g-clusterip-defaults.yaml  scenario-h-hostpath-internal.yaml
experiments/: anchor-lib-to-pkg.tsv  e1_factor_coverage.csv  e2_real_images.csv  e3_runtime_ablation.csv  e4_baseline_correlation.csv  e5_weight_sensitivity.csv  e6_real_images_with_runtime.csv  e7_correlation_with_runtime.csv  e8_anchor_postgres_real.csv  e8_anchor_rabbitmq_real.csv  e8_anchor_redis_real.csv  falco-anchor-postgres-real.json
experiments/trivy-cache/: trivy-postgres_17.json  trivy-rabbitmq_3.13-management-alpine.json  trivy-redis_7-alpine.json
scripts/: run_experiments.py
src/ctxrisk/: __init__.py  cli.py  factors.py  scan.py  score.py
tests/: fixtures-trivy-rabbitmq.json  test_cli.py  test_examples.py  test_factors.py  test_scan.py  test_score.py
