[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ctxrisk"
version = "0.1.0"
description = "Context-sensitive container risk scoring — prototype for the thesis 'New Modification of the Security Assessment Method for Containerized Applications'"
authors = [{ name = "Angsar Kabdikarim", email = "ans.kabdikarim@gmail.com" }]
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
    "PyYAML>=6.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
ctxrisk = "ctxrisk.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
